--- a/TestControlTool.Web/Views/Task/Create.cshtml
+++ b/TestControlTool.Web/Views/Task/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BootstrapSupport
 @using TestControlTool.Core.Models
+@using TestControlTool.Web
 @using TestControlTool.Web.Models
 @model TaskChildsModel
 @{
@@ -78,9 +79,9 @@
                             <li class="divider"></li>
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite(true); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite(false); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                     <div class="btn-group">
@@ -88,9 +89,9 @@
                         <ul class="dropdown-menu">
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal(true); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal(false); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                 </fieldset>
