--- a/TestControlTool.Web/Views/Task/Edit.cshtml
+++ b/TestControlTool.Web/Views/Task/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Collections
 @using BootstrapSupport
 @using TestControlTool.Core.Models
+@using TestControlTool.Web
 @using TestControlTool.Web.Models
 @model TaskChildsModel
 @{
@@ -87,12 +88,12 @@
                                     <button type="button" class="close" aria-hidden="true" onclick="removeItem(this)">×</button>
                                 </li>
                             }
-                            else if (task.TaskType == TaskType.TestSuiteTrunk || task.TaskType == TaskType.TestSuiteRelease)
+                            else if (task.TaskType == TaskType.UISuiteTrunk || task.TaskType == TaskType.UISuiteRelease)
                             {
                                 var taskModel = new TestSuiteModel();
                                 try
                                 {
-                                    taskModel = TestSuiteModel.GetFromXmlFile(task.File, task.TaskType == TaskType.TestSuiteTrunk);
+                                    taskModel = TestSuiteModel.GetFromXmlFile(task.File, task.TaskType.ToSuiteType());
 
                                 }
                                 catch (Exception e)
@@ -100,71 +101,10 @@
                                     <script type="text/javascript"> alert('@task.File');</script>
                                     <script type="text/javascript"> alert('@e.Message');</script>
                                 }
-                                <li id="@taskModel.Name" type="@task.TaskType.ToString()" machine="@taskModel.Machine">
+                                <li id="@taskModel.Name" type="@taskModel.Type.ToString()" machine="@taskModel.Machine" json="@taskModel.GetJson()">
                                     <a onclick="editTestSuiteTask(this)" href="#">@taskModel.Name</a>
                                     <a class="pull-right" data-toggle="tooltip" rel="tooltip" title="Download XML file" style="padding-left: 10px" href="@Url.Action("GetXmlFile", "Task", new { taskId = Model.Task.Id, childTaskName = task.Name })"><i class="icon-download-alt"></i></a>
                                     <button type="button" class="close pull-right" aria-hidden="true" onclick="removeItem(this)">×</button>
-                                    <ol style="display: none">
-                                        @foreach (var test in taskModel.Tests)
-                                        {
-                                            var visibleProperties = test.VisibleProperties(new string[0]);
-                                            var properties = visibleProperties.Where(x => x.PropertyType.IsEnum || x.PropertyType == typeof(string) || x.PropertyType == typeof(int)
-                                                                                          || x.PropertyType == typeof(bool)).Aggregate("", (s, info) => s + " " + info.Name + "='" + info.GetValue(test) + "'");
-
-                                            foreach (var property in visibleProperties.Where(x => !(x.PropertyType.IsEnum || x.PropertyType == typeof(string) || x.PropertyType == typeof(int)
-                                                                                          || x.PropertyType == typeof(bool)) && !x.PropertyType.Name.Contains("List")))
-                                            {
-                                                properties += property.PropertyType.VisibleProperties(new string[0]).Where(x => x.PropertyType.IsEnum || x.PropertyType == typeof(string) || x.PropertyType == typeof(int)
-                                                                                      || x.PropertyType == typeof(bool)).Aggregate("", (s, info) => s + " " + property.Name + "_" + info.Name + "='" + info.GetValue(property.GetValue(test)) + "'");
-
-                                            }
-                                            <li  testtype="@test.GetType().Name" @Html.Raw(properties)>
-                                                <a href="#" onclick="editTestModal(this)">@test.GetType().Name</a>
-                                                <button type='button' class='close' aria-hidden='true' onclick='removeItem(this)'>×</button>
-                                                @foreach (var property in visibleProperties.Where(x => x.PropertyType.Name.Contains("List")))
-                                                {
-                                                        <ul id="@(property.Name + "HiddenList")" style="display: none;" class="sortable">
-
-                                                            @{
-                                                    var enumerable = ((IEnumerable)property.GetValue(test)).Cast<object>().Skip(1);
-                                                            }
-                                                            @foreach (var item in enumerable)
-                                                            {
-                                                                var childPropertyInfos = item.VisibleProperties(new string[0]).Where(x => x.PropertyType.IsEnum || x.PropertyType == typeof(string)
-                                                                                                                                          || x.PropertyType == typeof(int) || x.PropertyType == typeof(bool)).ToList();
-                                                                var childProperties = childPropertyInfos.Aggregate("", (s, info) => s + " " + info.Name + "='" + info.GetValue(item) + "'");
-                                                                var name = "";
-                                                                var genericType = property.PropertyType.GenericTypeArguments.First();
-
-                                                                if (genericType == typeof(string) || genericType.IsEnum || genericType == typeof(int) || genericType == typeof(bool))
-                                                                {
-                                                                    name = @item.ToString();
-                                                                    childProperties = "item='" + name + "'";
-                                                                }
-                                                                else
-                                                                {
-                                                                    name = @childPropertyInfos.First().GetValue(item).ToString();
-                                                                }
-                            
-                                                                <li @Html.Raw(childProperties)>
-                                                                    <a href='#' onclick="editListItem('@genericType.FullName', this); return false;">
-                                                                        @name
-                                                                    </a>
-                                                                    <button type='button' class='close' aria-hidden='true' onclick='removeItem(this)'>×</button>
-                                                                </li>
-                                                            }
-                                                        </ul>
-                                                }
-                                                @foreach (var property in visibleProperties.Where(x => !(x.PropertyType.IsEnum || x.PropertyType == typeof(string) || x.PropertyType == typeof(int)
-                                                                                          || x.PropertyType == typeof(bool))))
-                                                {
-                                                    var childProperties = visibleProperties.Where(x => x.PropertyType.IsEnum || x.PropertyType == typeof(string) || x.PropertyType == typeof(int)
-                                                                                          || x.PropertyType == typeof(bool)).Aggregate("", (s, info) => s + " " + info.Name + "='" + info.GetValue(test) + "'");
-                                                    <property id="@property.Name" @childProperties></property>
-                                                }
-                                            </li>
-                                        }
-                                    </ol>
                                 </li>
                             }
                         }
@@ -180,9 +120,9 @@
                             <li class="divider"></li>
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite(true); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite(false); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                     <div class="btn-group">
@@ -190,9 +130,9 @@
                         <ul class="dropdown-menu">
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal(true); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal(false); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                 </fieldset>
