--- a/TestControlTool.Web/Views/Task/UploadTestSuiteXml.cshtml
+++ b/TestControlTool.Web/Views/Task/UploadTestSuiteXml.cshtml
@@ -59,7 +59,7 @@
     });
     
     $('#UploadTestSuiteXmlModal').on('show', function () {
-        $('#UploadTestSuiteLabel').text(isTrunk ? 'Upload Trunk Test Suite Xml' : 'Upload Release Test Suite Xml');
+        $('#UploadTestSuiteLabel').text('Upload ' + GetNameFromSuiteType(suiteType) + ' Xml');
     });
 
     $('#UploadTestSuiteXmlButton').on('click', function () {
@@ -69,7 +69,7 @@
             success: showResponse,  // post-submit callback 
  
             // other available options: 
-            url: "@Url.Action("UploadTestSuiteXml", "Task")" + "/" + taskId + "?trunk=" + isTrunk + "&machine=" + $('#UploadTestSuiteMachine').val(),         // override for form's 'action' attribute 
+            url: "@Url.Action("UploadTestSuiteXml", "Task")" + "/" + taskId + "?type=" + suiteType + "&machine=" + $('#UploadTestSuiteMachine').val(),         // override for form's 'action' attribute 
             //type:      type        // 'get' or 'post', override for form's 'method' attribute 
             //dataType:  'text',        // 'xml', 'script', or 'json' (expected server response type) 
             clearForm: true,        // clear all form fields after successful submit 
