--- a/TestControlTool.Web/Views/Task/Edit.cshtml
+++ b/TestControlTool.Web/Views/Task/Edit.cshtml
@@ -93,7 +93,7 @@
                                 var taskModel = new TestSuiteModel();
                                 try
                                 {
-                                    taskModel = TestSuiteModel.GetFromXmlFile(task.File, task.TaskType.ToSuiteType());
+                                    taskModel = TestSuiteModel.GetFromXmlFile(task.File, task.TaskType);
 
                                 }
                                 catch (Exception e)
@@ -120,9 +120,9 @@
                             <li class="divider"></li>
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteTrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                     <div class="btn-group">
@@ -130,9 +130,9 @@
                         <ul class="dropdown-menu">
                             @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UITrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteTrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TestSuiteType.UIRelease.ToString()'); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteRelease.ToString()'); return false;">Test Suite for Release</a></li>
                         </ul>
                     </div>
                 </fieldset>
